cookbooks/olympus/pandora/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "pandora"
  labels:
    app.kubernetes.io/instance: "pandora"
    app.kubernetes.io/name: "pandora"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "pandora"
      app.kubernetes.io/instance: "pandora"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "pandora"
        app.kubernetes.io/instance: "pandora"
    spec:
      imagePullSecrets:
        - name: zeus-fyi-ext
      containers:
        - name: "pandora"
          image: "registry.digitalocean.com/zeus-fyi/pandora:latest"
          volumeMounts:
            - mountPath: "/scripts"
              name: "cm-pandora"
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/start.sh" ]
          imagePullPolicy: Always
          ports:
            - name: "http"
              containerPort: 8000
              protocol: "TCP"
          livenessProbe:
            httpGet:
              path: "/health"
              port: "http"
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: "/health"
              port: "http"
            initialDelaySeconds: 20
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            {}
      volumes:
        - name: cm-pandora
          configMap:
            name: cm-pandora
            defaultMode: 0744
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
